# rollback-plan-check

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/rollback_plan_check/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_rollback_plan_check.py
